--- a/about_us.html
+++ b/about_us.html
@@ -3,12 +3,19 @@
 .container-start {
   font-family: sans-serif;
 }
+.container-box {
+  position: absolute;
+  font-size: 15px;
+  line-height: 40px;
+  padding-left: 100px;
+  top: 125px;
+}
 </style>
 <div class="container-start">
 <html lang="en">
 <head>
   <title>
-    Beechwood Doughnuts website
+    Dough_Shop
   </title>
 
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300" rel="stylesheet">
@@ -36,24 +43,23 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
             <div id="nav"><a href="index.html">Home</a> | <a href="menu.html">Menu</a> | <a href="about_us.html">About Us</a></div>
             <div class="wsite-element wsite-not-footer wsite-header-elements">
               <div class="wsite-section-wrap">
+                <div class="container-box">
                 <div class="text-block" style="text-align: center;">
                   <h2 style="text-align: center;"> FAMILY OWNED AND OPERATED SINCE 1993 </h2>
-                   <p> Beechwood Donuts was founded by Tim and Rebecca Stephens in 1993.
-                     <br>
+                   <p> Beechwood Doughnuts was founded by Tim and Rebecca Stephens in 1993.
                      Inspired by their love of baking and creating new recipes, the Stephens have
                      <br>
                      dedicated over 20 years to perfecting their delicious doughnut recipes.
-                     <br>
                      Known for their Signature Doughs, Tim and Rebecca's small town doughnut
                      <br>
                      shop is the first place people stop when traveling from out of town.
-                     <br>
                      Beechwood Doughnuts provides a family atmosphere where people of all
                      <br>
                      ages can stop in and taste a delicious, freshly-made doughnut.
                    </p>
+                 </div>
                    <div class="container">
-                     <img src="http://a57.foxnews.com/images.foxnews.com/content/fox-news/lifestyle/2017/12/05/couple-celebrates-47-years-marriage-with-portraits-by-photographer-daughter/_jcr_content/par/featured_image/media-0.img.jpg/1862/1048/1512495450297.jpg?ve=1&tl=1" width="1200px" height="555px" />
+                     <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/stephens.jpg" width="1200px" height="650px" />
                    </div>
                    </div>
                    </div>
