--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 }
 .text-block {
   position: absolute;
-  bottom: 140px;
-  right: 10px;
+  bottom: 160px;
+  right: 200px;
   background-color: clear;
   color: white;
   padding-left: 20px;
   padding-right: 20px;
-  font-size: 30px;
+  font-size: 20px;
 }
 .container-start {
   font-family: sans-serif;
@@ -74,9 +74,8 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
             <div id="nav"><a href="home.html">Home</a> | <a href="menu.html">Menu</a> | <a href="about_us.html">About Us</a> </div>
             <div class="wsite-element wsite-not-footer wsite-header-elements">
               <div class="wsite-section-wrap">
-                <div class="image">
             <div class="container">
-              <img src="https://data.parkbench.com/content/data/uploaded/business/interviews/DSC_0035-1.JPG" width="1349px" height="592px" />
+              <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_shop.JPG" width="1349px" height="550px" />
               <div class="text-block" style="text-align: center;">
                <h2 style="text-align: center;"> GIVING YOU A DOZEN REASONS TO EAT ANOTHER DOUGHNUT </h2>
                <p> Find your favorite doughnut at Beechwood Doughnuts.
@@ -90,7 +89,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
               <div class="wsite-section-elements">
               <h2 class="wsite-content-title" style="text-align:center;">
             <div class="container">
-            </div>
+
               </div>
                 </div>
                   </div>
@@ -133,7 +132,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
 <div class="container3">
   <div class="row">
     <div class="col-sm-5">
-        <img src="https://images.unsplash.com/photo-1520528410595-13001151f055?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b0a1027eebadc34db8a2a75a777663fe&auto=format&fit=crop&w=802&q=80" width="425px" height="438px" />
+        <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_hand.jpg" width="425px" height="438px" />
 </div>
 </div>
 </div>
