--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
 <html>
 <head>
   <title>
-    Beechwood Doughnuts website
+    Dough_Shop
   </title>
 
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300" rel="stylesheet">
@@ -93,7 +93,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
               <div class="wsite-section-wrap">
                 <div class="image">
             <div class="container">
-              <img src="https://images.unsplash.com/photo-1511558721361-3e5af54fd5a4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f99283d2797146bbd161bfe87d630272&auto=format&fit=crop&w=2850&q=80" width="1349px" height="589px" />
+              <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_box.jpg" width="1349px" height="589px" />
               <div class="text-block" style="text-align: center;">
                <h2 style="text-align: center;"> MENU </h2>
                <p> Browse through our everday options, from the classics to our signature doughs. </p>
