--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
 <div class="container3">
   <div class="row">
     <div class="col-sm-5">
-        <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_hand.jpg" width="425px" height="438px" />
+        <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_hand.JPG" width="425px" height="438px" />
 </div>
 </div>
 </div>
