--- a/menu.html
+++ b/menu.html
@@ -93,7 +93,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
               <div class="wsite-section-wrap">
                 <div class="image">
             <div class="container">
-              <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images.html/donut_box.JPG" width="1349px" height="589px" />
+              <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_box.JPG" width="1349px" height="589px" />
               <div class="text-block" style="text-align: center;">
                <h2 style="text-align: center;"> MENU </h2>
                <p> Browse through our everday options, from the classics to our signature doughs. </p>
