--- a/about_us.html
+++ b/about_us.html
@@ -59,7 +59,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
                    </p>
                  </div>
                    <div class="container">
-                     <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/stephens.JPG" width="1200px" height="650px" />
+                     <img src="images/stephens.JPG" width="1200px" height="650px" />
                    </div>
                    </div>
                    </div>
