--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
             <div class="wsite-element wsite-not-footer wsite-header-elements">
               <div class="wsite-section-wrap">
             <div class="container">
-              <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_shop.JPG" width="1349px" height="550px" />
+              <img src="images/donut_shop.JPG" width="1349px" height="550px" />
               <div class="text-block" style="text-align: center;">
                <h2 style="text-align: center;"> GIVING YOU A DOZEN REASONS TO EAT ANOTHER DOUGHNUT </h2>
                <p> Find your favorite doughnut at Beechwood Doughnuts.
@@ -132,7 +132,7 @@ padding-bottom: 62px !important;" cz-shortcut-listen="true">
 <div class="container3">
   <div class="row">
     <div class="col-sm-5">
-        <img src="/Users/jordanmiller/Documents/GitHub/Assignment-5/images/donut_hand.JPG" width="425px" height="438px" />
+        <img src="images/donut_hand.JPG" width="425px" height="438px" />
 </div>
 </div>
 </div>
